Agregado nuevos cambios en el diseno

--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="<%= BASE_URL %>favicon.png" type="image/png">
     <title>Chess Calendar</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but chesscalendar doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    <!-- <img src="/img/train-chess-1500x563.jpg" alt="" style="position: absolute;z-index: -999999;width: 100%;"> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
